[package]
name = "trekkie"
version = "0.1.0"
edition = "2021"

[dependencies]
tlms = { version = "0.7", git = "https://github.com/tlm-solutions/tlms.rs", features = ["schema", "measurements", "telegrams", "trekkie"]}

clap = { version = "4.0", features = ["derive"] }

# webserver shit
actix = "0.13"
actix-web = "4.0"
actix-diesel = { git = "https://github.com/frol/actix-diesel", branch = "actix-0.13", features = ["actix-web"] }
actix-identity = "*"
actix-session= { version = "0.7", features = ["redis-actor-session"] }
actix-multipart = "*"
derive_more = "0"

# serde serialization / deserialization
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# database
diesel = { version = "2", features = ["postgres", "r2d2", "uuid", "chrono"] }
r2d2 = "*"

# utils
chrono = "0.4"
uuid = { version = "*", features = ["serde", "v4"] }
env_logger = "*"
log = "*"
rand = "*"
futures = "0.3"

# fancy web features
utoipa = { version = "2", features = ["actix_extras"] }

# hell
gpx = { version = "0"}

