[package]
name = "trekkie"
version = "0.2.0"
edition = "2021"

[dependencies]
tlms = { version = "0.8", git = "https://github.com/tlm-solutions/tlms.rs", tag = "v0.8.0", features = ["schema", "measurements", "telegrams", "trekkie", "management"]}
lofi = { version = "0.3", git = "https://github.com/tlm-solutions/lofi", tag = "v0.3.1", features = [ "correlate" ] }

clap = { version = "4.1", features = ["derive"] }

# webserver shit
actix = "0.13"
actix-web = "4.0"
actix-diesel = { git = "https://github.com/frol/actix-diesel", branch = "actix-0.13", features = ["actix-web"] }
actix-identity = "*"
actix-session = { version = "0.7", features = ["redis-actor-session"] }
actix-multipart = "*"
derive_more = "0"

# serde serialization / deserialization
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# database
diesel = { version = "2", features = ["postgres", "r2d2", "uuid", "chrono"] }
r2d2 = "*"

# utils
chrono = "0.4"
uuid = { version = "*", features = ["serde", "v4"] }
env_logger = "0.10"
log = "*"
rand = "*"
futures = "0.3"
# hell
gpx = { version = "0"}

utoipa = { version = "3", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3", features = ["actix-web"] }
