[package]
name = "trekkie"
version = "0.2.1"
edition = "2021"

[dependencies]
tlms = { version = "0.9", git = "https://github.com/tlm-solutions/tlms.rs", features = [ "measurements", "telegrams", "trekkie", "management"]}

clap = { version = "4.1", features = ["derive"] }

# webserver shit
actix = "0.13"
actix-web = "4.0"
actix-identity = "0.5"
actix-session = { version = "0.7", features = ["redis-actor-session"] }
actix-multipart = "*"
derive_more = "0"

# serde serialization / deserialization
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# database
diesel = { version = "2", features = ["postgres", "r2d2", "uuid", "chrono"] }
r2d2 = "*"

# utils
chrono = "0.4"
uuid = { version = "*", features = ["serde", "v4"] }
env_logger = "0.10"
log = "*"
rand = "*"

# hell
gpx = { version = "0"}

utoipa = { version = "3", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3", features = ["actix-web"] }
futures = "0.3"

# grpc

tonic = "0.7"
